mobile view jumpy fix

--- a/src/components/about.scss
+++ b/src/components/about.scss
@@ -1,10 +1,5 @@
 @import '../variables.scss';
 
-.mobile-vh-fix {
-    border: 2px solid fuchsia;
-    height: viewportHeight;
-}
-
 .about_grid {
     width: calc(100% - 400px);
     height: calc(100vh - 24px);
